[package]
name = "kronoss"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["json"] }
futures = "0.3.29"
serde = { version = "1.0.193", features = ["serde_derive"] }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread", "process", "io-util", "signal"] }
async-stream = "0.3.5"
tower-http = { version = "0.6.2", features = ["cors"] }
http = "1.0.0"
